@@ -152,39 +152,39 @@ se_log_get_facility(const char* facility)
     }
     length = strlen(facility);
 
-    if (length == 4 && strncasecmp(facility, "KERN", 4))
+    if (length == 4 && strncasecmp(facility, "KERN", 4) == 0)
         return LOG_KERN;
-    else if (length == 4 && strncasecmp(facility, "USER", 4))
+    else if (length == 4 && strncasecmp(facility, "USER", 4) == 0)
         return LOG_USER;
-    else if (length == 4 && strncasecmp(facility, "MAIL", 4))
+    else if (length == 4 && strncasecmp(facility, "MAIL", 4) == 0)
         return LOG_MAIL;
-    else if (length == 6 && strncasecmp(facility, "DAEMON", 6))
+    else if (length == 6 && strncasecmp(facility, "DAEMON", 6) == 0)
         return LOG_DAEMON;
-    else if (length == 4 && strncasecmp(facility, "AUTH", 4))
+    else if (length == 4 && strncasecmp(facility, "AUTH", 4) == 0)
         return LOG_AUTH;
-    else if (length == 3 && strncasecmp(facility, "LPR", 3))
+    else if (length == 3 && strncasecmp(facility, "LPR", 3) == 0)
         return LOG_LPR;
-    else if (length == 4 && strncasecmp(facility, "NEWS", 4))
+    else if (length == 4 && strncasecmp(facility, "NEWS", 4) == 0)
         return LOG_NEWS;
-    else if (length == 4 && strncasecmp(facility, "UUCP", 4))
+    else if (length == 4 && strncasecmp(facility, "UUCP", 4) == 0)
         return LOG_UUCP;
-    else if (length == 4 && strncasecmp(facility, "CRON", 4))
+    else if (length == 4 && strncasecmp(facility, "CRON", 4) == 0)
         return LOG_CRON;
-    else if (length == 6 && strncasecmp(facility, "LOCAL0", 6))
+    else if (length == 6 && strncasecmp(facility, "LOCAL0", 6) == 0)
         return LOG_LOCAL0;
-    else if (length == 6 && strncasecmp(facility, "LOCAL1", 6))
+    else if (length == 6 && strncasecmp(facility, "LOCAL1", 6) == 0)
         return LOG_LOCAL1;
-    else if (length == 6 && strncasecmp(facility, "LOCAL2", 6))
+    else if (length == 6 && strncasecmp(facility, "LOCAL2", 6) == 0)
         return LOG_LOCAL2;
-    else if (length == 6 && strncasecmp(facility, "LOCAL3", 6))
+    else if (length == 6 && strncasecmp(facility, "LOCAL3", 6) == 0)
         return LOG_LOCAL3;
-    else if (length == 6 && strncasecmp(facility, "LOCAL4", 6))
+    else if (length == 6 && strncasecmp(facility, "LOCAL4", 6) == 0)
         return LOG_LOCAL4;
-    else if (length == 6 && strncasecmp(facility, "LOCAL5", 6))
+    else if (length == 6 && strncasecmp(facility, "LOCAL5", 6) == 0)
         return LOG_LOCAL5;
-    else if (length == 6 && strncasecmp(facility, "LOCAL6", 6))
+    else if (length == 6 && strncasecmp(facility, "LOCAL6", 6) == 0)
         return LOG_LOCAL6;
-    else if (length == 6 && strncasecmp(facility, "LOCAL7", 6))
+    else if (length == 6 && strncasecmp(facility, "LOCAL7", 6) == 0)
         return LOG_LOCAL7;
     se_log_warning("syslog facility %s not supported, logging to "
                    "log_daemon", facility);
